--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-         <a href="{% url 'add_owner' %}"><button class="btn btn-outline-success my-2 my-sm-0" >Add Owner</button></a>
+         <a href="{% url 'form' %}"><button class="btn btn-outline-success my-2 my-sm-0" >Add Owner</button></a>
 
     </nav>
 <!-- message printing -->
